k8s/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opsgenie-actions
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opsgenie-actions
  template:
    metadata:
      labels:
        app: opsgenie-actions
    spec:
      containers:
        - name: py
          image: python:3.13-slim
          ports:
            - containerPort: 80
          command:
            - bash
            - -c
            - |
              export PYTHONUNBUFFERED=1
              python /f/server.py
          resources:
            requests:
              memory: "100Mi"
              cpu: "250m"
          volumeMounts:
            - name: config-volume
              mountPath: /f

#        - name: nginx
#          image: nginx:latest
#          ports:
#            - containerPort: 80
#          volumeMounts:
#            - name: config-volume
#              mountPath: /etc/nginx/nginx.conf
#              subPath: nginx.conf
      volumes:
        - name: config-volume
          configMap:
            name: nginx-config

---
apiVersion: v1
kind: Service
metadata:
  name: opsgenie-actions
  namespace: default
spec:
  selector:
    app: opsgenie-actions
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opsgenie-actions
  namespace: default
spec:
  ingressClassName: nginx-stable
  tls:
    - hosts:
        - opsgenie-actions.ops.improvado.io
      secretName: opsgenie-actions-tls
  rules:
    - host: opsgenie-actions.ops.improvado.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opsgenie-actions
                port:
                  number: 8000
